# vehicle_sim

./: .gitmodules  README.md  frames.gv
aruco/: CMakeLists.txt  package.xml
aruco/src/: ArucoNode.cpp  bottom_markers.cpp  bottom_markers.txt
config/: aruco_debug.rviz
dbw/: CMakeLists.txt  package.xml
dbw/src/: DbwNode.cpp
hcpath/: CMakeLists.txt  package.xml
hcpath/action/: move.action  park.action
hcpath/config/: path.rviz
hcpath/msg/: GaussianPathState.msg  PathState.msg
hcpath/src/: HcPathNode.cpp  cc00_dubins_state_space.cpp  cc00_dubins_state_space.hpp  cc0pm_dubins_state_space.cpp  cc0pm_dubins_state_space.hpp  cc_dubins_state_space.cpp  cc_dubins_state_space.hpp  ccpm0_dubins_state_space.cpp  ccpm0_dubins_state_space.hpp  ccpmpm_dubins_state_space.cpp  ccpmpm_dubins_state_space.hpp  configuration.cpp  cute_c2.cpp  cute_c2.h  ekf.cpp  ekf.hpp  hc_cc_circle.cpp  hc_cc_circle.hpp  hc_cc_state_space.cpp  hc_cc_state_space.hpp  hcpmpm_reeds_shepp_state_space.cpp  hcpmpm_reeds_shepp_state_space.hpp  paths.cpp  paths.hpp  steering_functions.hpp  utilities.cpp
hcpath/srv/: path_srv.srv
launcher/vehicle_sim_launcher/launch/: dock2front.launch  dock2rear.launch  gazebo7_citysim_autoware.launch  gazebo9_citysim_autoware.launch  gazebo_autoware.launch  gazebo_empty_world.launch  gazebo_mcity_autoware.launch  rviz_test.launch  world_test.launch
maruco/: CMakeLists.txt  package.xml
maruco/src/: ArucoNode.cpp  MarucoNode.cpp
perf/: CMakeLists.txt  package.xml
perf/src/: PerfNode.cpp
scripts/: make_board.py  make_planar_board.py
vehicle/sensor_model/bumper/bumper_description/: CMakeLists.txt  package.xml
vehicle/sensor_model/bumper/bumper_description/urdf/: bumper.xacro
vehicle/sensor_model/camera/camera_description/urdf/: D430IR.xacro  monocular_camera.xacro  quad_camera.xacro
vehicle/sensor_model/imu/imu_description/urdf/: imu.xacro
vehicle/sensor_model/l_sonar/l_sonar_description/: CMakeLists.txt  package.xml
vehicle/sensor_model/l_sonar/l_sonar_description/urdf/: l_sonar.xacro
vehicle/sensor_model/r_sonar/r_sonar_description/: CMakeLists.txt  package.xml
vehicle/sensor_model/r_sonar/r_sonar_description/urdf/: r_sonar.xacro
vehicle/sensor_model/rear_bumper/rear_bumper_description/: CMakeLists.txt  package.xml
vehicle/sensor_model/rear_bumper/rear_bumper_description/urdf/: rear_bumper.xacro
vehicle/vehicle_model/config/: calibration.yaml  controller.yaml  path.yaml  vehicle_info.yaml
vehicle/vehicle_model/mesh/: car4.dae  car_fifthwheel.dae  car_no_cam.dae  car_rear_wheel.dae  car_sidehitch.dae  car_sidehitch_5whl.dae  car_with_trailer.dae
vehicle/vehicle_model/urdf/: actuator.xacro  body.xacro  body_with_trailer.xacro  rear_body.xacro  rear_vehicle.xacro  steering.xacro  vehicle.gazebo  vehicle.xacro  wheel.gazebo  wheel.xacro
vehicle/vehicle_sim_interface/: CMakeLists.txt
vehicle/vehicle_sim_interface/src/: vehicle_info_publisher.cpp  vehicle_input_subscriber.cpp
worlds/gazebo_world_description/: package.xml
worlds/gazebo_world_description/aruco_visual_marker_7_pad/: model.sdf
worlds/gazebo_world_description/materials/scripts/: aruco_bottom_marker.material  aruco_front_marker.material  aruco_left_marker.material  aruco_rear_marker.material  aruco_right_marker.material  aruco_visual_marker_board.material  column.material
worlds/gazebo_world_description/worlds/: KUEparking.world  KUEparking2.world  autoware.world  road.world
