<?xml version="1.0"?>
<package>
	<name>dbw</name>
	<version>1.1.0</version>
	<description>DBW with joystick</description>
	<maintainer email="henry.omd@gmail.com">Henry</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>boost</build_depend>
	
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

	<build_depend>std_msgs</build_depend>
	<run_depend>std_msgs</run_depend>

	<build_depend>sensor_msgs</build_depend>
	<run_depend>sensor_msgs</run_depend>

	<build_depend>geometry_msgs</build_depend>
	<run_depend>geometry_msgs</run_depend>

	<build_depend>tf2</build_depend>
	<run_depend>tf2</run_depend>

	<build_depend>tf2_ros</build_depend>
	<run_depend>tf2_ros</run_depend>

	<build_depend>hcpath</build_depend>
	<run_depend>hcpath</run_depend>
</package>
