<?xml version="1.0"?>
<package>
	<name>hcpath</name>
	<version>1.1.0</version>
	<description>Hybrid curvature path generation</description>
	<maintainer email="henry.omd@gmail.com">Henry</maintainer>
	<license>Apache 2</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

	<build_depend>std_msgs</build_depend>
	<run_depend>std_msgs</run_depend>

	<build_depend>geometry_msgs</build_depend>
	<run_depend>geometry_msgs</run_depend>

  	<build_depend>nav_msgs</build_depend>
	<run_depend>nav_msgs</run_depend>

	<build_depend>visualization_msgs</build_depend>
	<run_depend>visualization_msgs</run_depend>

	<build_depend>actionlib_msgs</build_depend>
	<run_depend>actionlib_msgs</run_depend>

	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>

	<build_depend>roslib</build_depend>
	<run_depend>roslib</run_depend>

	<build_depend>costmap_2d</build_depend>
	<run_depend>costmap_2d</run_depend>

	<build_depend>tf</build_depend>
	<run_depend>tf</run_depend>

	<build_depend>eigen</build_depend>
	<run_depend>eigen</run_depend>
</package>
