<?xml version="1.0"?>
<package>
	<name>maruco</name>
	<version>1.1.0</version>
	<description>maruco package can be used to detect, track and calculate pose from multiple ARUCO markers on 1 monocular camera</description>
	<maintainer email="tentone@outlook.com">tentone</maintainer>
	<license>MIT</license>

	<build_depend>image_transport</build_depend>
	<run_depend>image_transport</run_depend>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

	<build_depend>std_msgs</build_depend>
	<run_depend>std_msgs</run_depend>

	<build_depend>tf</build_depend>
	<run_depend>tf</run_depend>
</package>
