<?xml version="1.0"?>
<package>
	<name>maruco</name>
	<version>1.1.0</version>
	<description>maruco package can be used to detect, track and calculate pose from 3D markers on 1 monocular camera</description>
	<maintainer email="henry.omd@gmail.com">Henry</maintainer>
	<license>MIT</license>

	<build_depend>image_transport</build_depend>
	<run_depend>image_transport</run_depend>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

	<build_depend>std_msgs</build_depend>
	<run_depend>std_msgs</run_depend>

	<build_depend>tf2</build_depend>
	<run_depend>tf2</run_depend>

	<build_depend>tf2_ros</build_depend>
	<run_depend>tf2_ros</run_depend>
</package>
