<?xml version="1.0"?>
<package>
	<name>perf</name>
	<version>1.1.0</version>
	<description>Pose estimation performance against Gazebo ground truth</description>
	<maintainer email="henry.omd@gmail.com">Henry</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

	<build_depend>gazebo_msgs</build_depend>
	<run_depend>gazebo_msgs</run_depend>

	<build_depend>std_msgs</build_depend>
	<run_depend>std_msgs</run_depend>

	<build_depend>tf2</build_depend>
	<run_depend>tf2</run_depend>

	<build_depend>tf2_ros</build_depend>
	<run_depend>tf2_ros</run_depend>
</package>
