<?xml version="1.0"?>
<package format="2">
  <name>r_sonar_description</name>
  <version>0.0.0</version>
  <description>r_sonar_description package</description>
  
  <maintainer email="duckfrost@theconstructsim.com">duckfrost</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
